--- a/src/client/package.json
+++ b/src/client/package.json
@@ -23,6 +23,7 @@
     "aos": "^2.3.4",
     "chart.js": "^3.1.1",
     "mdb-angular-ui-kit": "^2.2.0",
+    "ngx-clipboard": "^15.1.0",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
