:recycle: Update requirements, add pytest config & cli command

--- a/src/server/requirements.txt
+++ b/src/server/requirements.txt
@@ -1,22 +1,34 @@
 anyio==3.6.1
 asgiref==3.5.2
+attrs==21.4.0
 autopep8==1.6.0
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
 click==8.1.3
 commonmark==0.9.1
 docker==5.0.3
-h11==0.13.0
+h11==0.12.0
+httpcore==0.15.0
+httpx==0.23.0
 idna==3.3
+iniconfig==1.1.1
+packaging==21.3
 pkg_resources==0.0.0
+pluggy==1.0.0
+py==1.11.0
 pycodestyle==2.8.0
 pydantic==1.9.1
 Pygments==2.12.0
+pyparsing==3.0.9
+pytest==7.1.2
+pytest-asyncio==0.18.3
 requests==2.27.1
+rfc3986==1.5.0
 rich==12.4.1
 sniffio==1.2.0
 starlette==0.20.0
 toml==0.10.2
+tomli==2.0.1
 typer==0.4.1
 typing_extensions==4.2.0
 urllib3==1.26.9
