--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -24,7 +24,7 @@
       "@services/*": ["src/app/core/services/*"],
       "@models/*": ["src/app/core/models/*"],
       "@components/*": ["src/app/components/*"],
-      "@env/*": ["src/environments/environment"],
+      "@env": ["src/environments/environment"],
       "@modals/*": ["src/app/components/modal/*"]
     }
   },
