--- a/src/client/package.json
+++ b/src/client/package.json
@@ -38,6 +38,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@ng-select/ng-select": "^8.3.0",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.5",
     "chart.js": "^3.1.1",
