--- a/src/client/package.json
+++ b/src/client/package.json
@@ -7,13 +7,14 @@
     "url": "http://github.com/AbduazizZiyodov"
   },
   "license": "MIT",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "main": "main.js",
   "productName": "Docker Dashboard",
   "keywords": [
     "angular",
     "electron",
-    "docker"
+    "docker",
+    "dashboard"
   ],
   "os": [
     "darwin",
