--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -25,7 +25,9 @@
       "@models/*": ["src/app/core/models/*"],
       "@components/*": ["src/app/components/*"],
       "@env": ["src/environments/environment"],
-      "@modals/*": ["src/app/components/modal/*"]
+      "@modals/*": ["src/app/components/modal/*"],
+      "@containers/*": ["src/app/core/container/*"],
+      "@image/*": ["src/app/core/image/*"]
     }
   },
   "angularCompilerOptions": {
