--- a/src/server/requirements.txt
+++ b/src/server/requirements.txt
@@ -1,5 +1,9 @@
+aiodocker==0.21.0
+aiohttp==3.8.1
+aiosignal==1.2.0
 anyio==3.6.1
 asgiref==3.5.2
+async-timeout==4.0.2
 attrs==21.4.0
 autopep8==1.6.0
 certifi==2022.5.18.1
@@ -7,11 +11,15 @@ charset-normalizer==2.0.12
 click==8.1.3
 commonmark==0.9.1
 docker==5.0.3
+frozenlist==1.3.0
 h11==0.12.0
 httpcore==0.15.0
 httpx==0.23.0
 idna==3.3
 iniconfig==1.1.1
+multidict==6.0.2
+natsort==8.1.0
+nest-asyncio==1.5.5
 packaging==21.3
 pluggy==1.0.0
 py==1.11.0
@@ -29,8 +37,9 @@ starlette==0.20.0
 toml==0.10.2
 tomli==2.0.1
 typer==0.4.1
-typing_extensions==4.2.0
+typing-extensions==4.2.0
 urllib3==1.26.9
 uvicorn==0.17.6
 websocket-client==1.3.2
-natsort==8.1.0
+websockets==10.3
+yarl==1.7.2
