:fire: Migrate client side from electron to `tauri rs`

--- a/src/client/package.json
+++ b/src/client/package.json
@@ -22,6 +22,7 @@
   ],
   "scripts": {
     "ng": "ng",
+    "tauri": "tauiri",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -40,6 +41,7 @@
     "@angular/router": "~13.3.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@ng-select/ng-select": "^8.3.0",
+    "@tauri-apps/api": "^1.1.0",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.5",
     "chart.js": "^3.1.1",
@@ -57,6 +59,7 @@
     "@angular-devkit/build-angular": "~13.3.4",
     "@angular/cli": "~13.3.4",
     "@angular/compiler-cli": "~13.3.0",
+    "@tauri-apps/cli": "^1.1.1",
     "@types/aos": "^3.0.4",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
