--- a/src/server/pytest.ini
+++ b/src/server/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 asyncio_mode=auto
-filterwarnings =ignore::UserWarning
+filterwarnings =
+    ignore::UserWarning 
+    ignore::DeprecationWarning
