--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,20 +1,21 @@
 {
   "name": "docker-dashboard",
-  "description": "A simple lightweight application that makes managing containers & images on Docker easy!",
+  "description": "Simple lightweight GUI application for working with Docker",
   "author": {
     "email": "abduaziz.ziyodov@mail.ru",
     "name": "Abduaziz",
     "url": "http://github.com/AbduazizZiyodov"
   },
   "license": "MIT",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "main": "main.js",
   "productName": "Docker Dashboard",
   "keywords": [
     "angular",
-    "electron",
+    "tauri",
     "docker",
-    "dashboard"
+    "dashboard",
+    "developer-tool"
   ],
   "os": [
     "darwin",
@@ -22,7 +23,6 @@
   ],
   "scripts": {
     "ng": "ng",
-    "tauri": "tauiri",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -40,8 +40,6 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
-    "@ng-select/ng-select": "^8.3.0",
-    "@tauri-apps/api": "^1.1.0",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.5",
     "chart.js": "^3.1.1",
@@ -59,13 +57,9 @@
     "@angular-devkit/build-angular": "~13.3.4",
     "@angular/cli": "~13.3.4",
     "@angular/compiler-cli": "~13.3.0",
-    "@tauri-apps/cli": "^1.1.1",
     "@types/aos": "^3.0.4",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
-    "electron": "^19.1.8",
-    "electron-installer-debian": "^3.1.0",
-    "electron-packager": "^15.5.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
