Update version number, change run command

--- a/configs/docker_dashboard.conf
+++ b/configs/docker_dashboard.conf
@@ -1,6 +1,6 @@
 [program:docker_dashboard]
 directory=/usr/lib/docker-dashboard
-command=/usr/lib/docker-dashboard/env/bin/python3 /usr/lib/docker-dashboard/server/manage.py serve
+command=/usr/lib/docker-dashboard/env/bin/uvicorn server.asgi:application --port 2121
 
 autostart=true
 autorestart=true
