--- a/.github/workflows/tauri-test-action.yml
+++ b/.github/workflows/tauri-test-action.yml
@@ -5,6 +5,9 @@ on:
 
 jobs:
   publish-tauri:
+    defaults:
+        run:
+          working-directory: ./src/client
     permissions:
       contents: write
     strategy:
