--- a/.github/workflows/tauri.yml
+++ b/.github/workflows/tauri.yml
@@ -1,4 +1,4 @@
-name: 'publish'
+name: "Test and Build(Tauri)"
 
 on:
   workflow_dispatch:
@@ -6,14 +6,14 @@ on:
 jobs:
   publish-tauri:
     defaults:
-        run:
-          working-directory: ./src/client
+      run:
+        working-directory: ./src/client
     permissions:
       contents: write
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-20.04, windows-latest]
+        platform: [macos-latest, ubuntu-20.04]
 
     runs-on: ${{ matrix.platform }}
     steps:
@@ -22,21 +22,24 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: install Rust stable
+      - name: Install Rust stable 🦀
         uses: dtolnay/rust-toolchain@stable
-      - name: install dependencies (ubuntu only)
+
+      - name: Install dependencies (ubuntu only) 📦
         if: matrix.platform == 'ubuntu-20.04'
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
-      - name: install frontend dependencies
+      
+      - name: Install frontend dependencies 📦
         run: npm install
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
         with:
-          tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
-          releaseName: 'App v__VERSION__'
-          releaseBody: 'See the assets to download this version and install.'
+          tagName: app-v__VERSION__
+          releaseName: "App v__VERSION__"
+          releaseBody: "See the assets to download this version and install."
           releaseDraft: true
           prerelease: false
