--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
       - ".github/workflows/ci.yml"
 
 jobs:
-  setup-tests-backend:
+  setup-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,3 +31,39 @@ jobs:
         run: |
           cd src/
           pytest ./server/
+
+  build-and-push:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Prepare server files
+        run: |
+          export VERSION=$(cat src/client/package.json | grep version | cut -f2 -d ':' | cut -f2 -d '"')
+
+          rsync -av src/server \
+            docker/ \
+            --exclude env \
+            --exclude pytest.ini \
+            --exclude tests \
+            --exclude .pytest_cache \
+            --exclude __pycache__ \
+            --exclude test_requirements.txt &&
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./docker/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:$VERSION
